--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,4 @@ jobs:
                 command: wget https://github.com/gohugoio/hugo/releases/download/v0.44/hugo_0.44_Linux-64bit.deb -O /tmp/hugo.deb && sudo dpkg -i /tmp/hugo.deb
             - run:
                 name: Build and publish site
-                command: ./.circleci/publish_to_ghpages.sh
+                command: sh ./.circleci/publish_to_ghpages.sh
