--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,8 @@ jobs:
         steps:
             - run:
                 name: Update git
-                command: |
-                    sudo add-apt-repository ppa:git-core/ppa
-                    sudo apt-get update
-                    sudo apt-get -y install git
-                    git --version
+                command: apk update && apk add git
+            - run: git --version
             - add_ssh_keys:
                 fingerprint:
                     - "4d:bc:43:fc:36:51:1a:8c:4b:a9:2d:15:a6:8d:d8:34"
