--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,6 @@ version: 2
 
 jobs:
     build:
-        branches:
-          only:
-            - develop
         docker:
             - image: cibuilds/hugo:latest
         working_directory: ~/warframeblog
@@ -28,3 +25,12 @@ jobs:
             - run:
                 name: Build and publish site
                 command: ./.circleci/publish_to_ghpages.sh
+
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only: develop
