--- a/config.toml
+++ b/config.toml
@@ -18,6 +18,7 @@ canonifyURLs = true
 	googleAdsense = "ca-pub-2537852360607581"
 	image = "/images/warframe-blog-header.jpg"
 	locale = "en_US"
+	navClasses = "navbar navbar-default navbar-fixed-top navbar-color-on-scroll navbar-transparent hestia_left"
 [taxonomies]
 	category = "categories"
 [permalinks]
