Fix npm not found

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     build:
         docker:
             - image: cibuilds/hugo:latest
+            - image: circleci/node:latest
         working_directory: ~/warframeblog
         steps:
             - run:
