--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,6 @@ version: 2
 jobs:
     build:
         docker:
-            - image: cibuilds/hugo:latest
             - image: circleci/node:latest
         working_directory: ~/warframeblog
         steps:
@@ -25,6 +24,9 @@ jobs:
             - run:
                 name: Install dependencies
                 command: npm install
+            - run:
+                name: Install Hugo
+                command: wget https://github.com/gohugoio/hugo/releases/download/v0.48/hugo_0.48_Linux-64bit.deb -O /tmp/hugo.deb && sudo dpkg -i /tmp/hugo.deb
             - run:
                 name: Mark script as executable
                 command: chmod +x ./.circleci/publish_to_ghpages.sh
