--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
         working_directory: ~/warframeblog
         steps:
             - run:
+                name: Install add-apt-repository
+                command: sudo apt-get install python-software-properties software-properties-common
+            - run:
                 name: Update git
                 command: sudo add-apt-repository ppa:git-core/ppa -y && sudo apt-get update && sudo apt-get install git -y
             - run: git --version
