--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,21 @@ jobs:
         steps:
             - run:
                 name: Remove git & install dependencies to build git
-                command: sudo apt-get remove git && sudo apt-get update && sudo apt-get install libcurl4-openssl-dev libexpat1-dev gettext libz-dev libssl-dev build-essential autoconf
+                command: |
+                    sudo apt-get remove git
+                    sudo apt-get update
+                    sudo apt-get install libcurl4-openssl-dev libexpat1-dev gettext libz-dev libssl-dev build-essential autoconf
             - run:
-                name: Build & install git
-                command: cd /tmp && curl -L --progress https://github.com/git/git/archive/v2.7.1.tar.gz | tar xz && cd git-2.7.1 && make configure ./configure && make prefix=/usr/local all
+                name: Build git
+                command: |
+                    mkdir git-src
+                    cd git-src
+                    curl -L --progress https://github.com/git/git/archive/v2.7.1.tar.gz | tar xz
+                    cd git-2.7.1
+                    make configure ./configure && make prefix=/usr/local all
+            - run: 
+                name: Install git
+                command: make prefix=/usr/local install
             - run: git --version
             - add_ssh_keys:
                 fingerprint:
@@ -19,6 +30,7 @@ jobs:
             - run: git config --global user.email bot@warframeblog.com
             - run: git config --global user.name CircleCI
             - checkout
+            - run: pwd
             - run:
                 name: Checkout submodules
                 command: git submodule sync && git submodule update --init
