--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,17 @@ jobs:
             - run:
                 name: Checkout submodules
                 command: git submodule sync && git submodule update --init
+            - restore_cache:
+                keys:
+                    - npm-deps-{{ checksum "package-lock.json" }}
+                    - npm-deps-
             - run:
                 name: Install dependencies
                 command: npm install
+            - save_cache:
+                key: npm-deps-{{ checksum "package-lock.json" }}
+                paths:
+                    - node_modules
             - run:
                 name: Install Hugo
                 command: apk update && apk add hugo
