--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "[![CircleCI](https://circleci.com/gh/warframeblog/warframeblog/tree/develop.svg?style=svg)](https://circleci.com/gh/warframeblog/warframeblog/tree/develop)",
   "scripts": {
     "start": "concurrently \"gulp\" \"hugo serve \"",
+    "build": "gulp build",
     "minify": "gulp minify:markup"
   },
   "repository": {
@@ -24,11 +25,12 @@
     "cheerio": "^1.0.0-rc.2",
     "clean-css": "^4.2.1",
     "concurrently": "^4.0.1",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-htmlmin": "^4.0.0",
     "gulp-inline-source": "^3.2.0",
     "gulp-sass": "^4.0.1",
+    "gulp-shell": "^0.6.5",
     "gulp-sourcemaps": "^2.6.4",
     "node-sass-magic-importer": "^5.2.0",
     "rimraf": "^2.6.2",
