--- a/package.json
+++ b/package.json
@@ -36,5 +36,7 @@
     "rimraf": "^2.6.2",
     "uncss": "^0.16.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gray-matter": "^4.0.1"
+  }
 }
