--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "uncss": "^0.16.2"
   },
   "dependencies": {
-    "gray-matter": "^4.0.1"
+    "gray-matter": "^4.0.1",
+    "node-sass": "^4.9.4"
   }
 }
