--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
     build:
         docker:
-            - image: node:alpine
+            - image: node:8.12.0-alpine
         working_directory: ~/warframeblog
         steps:
             - run:
