--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "concurrently \"gulp\" \"hugo serve \"",
     "build": "gulp build",
     "minify": "gulp minify:markup",
-    "baro:inventory": "node scripts/load-trader-inventory"
+    "trader:inventory": "node scripts/load-trader-inventory"
   },
   "repository": {
     "type": "git",
