--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,10 @@ jobs:
         working_directory: ~/warframeblog
         steps:
             - run:
+                name: Update git
+                command: apk update && apk add git
+            - run: git --version
+            - run:
                 name: Install OpenSSH
                 command: apk update && apk add openssh
             - add_ssh_keys:
