Update trader inventory on Friday at 17 00

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ workflows:
   update_trader_inventory:
     triggers:
       - schedule:
-          cron: "0,5,10,15,20,50,55 * * * *"
+          cron: "0 17 * * FRI"
           filters:
             branches:
               only: develop
