--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cheerio": "^1.0.0-rc.2",
     "clean-css": "^4.2.1",
     "concurrently": "^4.0.1",
+    "gray-matter": "^4.0.1",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-htmlmin": "^4.0.0",
@@ -34,13 +35,13 @@
     "gulp-sass": "^4.0.2",
     "gulp-shell": "^0.6.5",
     "gulp-sourcemaps": "^2.6.4",
-    "lodash": "^4.17.11",
-    "node-sass-magic-importer": "^5.2.0",
-    "rimraf": "^2.6.2",
-    "uncss": "^0.16.2",
-    "gray-matter": "^4.0.1",
     "inquirer": "^6.2.2",
-    "node-sass": "^4.9.4"
+    "lodash": "^4.17.11",
+    "node-sass": "^4.9.4",
+    "node-sass-magic-importer": "^5.2.0",
+    "number-to-words": "^1.2.4",
+    "rimraf": "^2.6.2",
+    "uncss": "^0.16.2"
   },
   "dependencies": {}
 }
