--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,9 +69,9 @@ workflows:
   version: 2
   build_and_deploy:
     jobs:
-      - build:
-          branches:
-            only: develop
+      build:
+        branches:
+          only: develop
   update_trader_inventory:
     triggers:
       - schedule:
