--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,7 @@ workflows:
       - build:
           filters:
             branches:
-              only: develop
+              ignore: gh-pages
   update_trader_inventory:
     triggers:
       - schedule:
