--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,8 +70,9 @@ workflows:
   build_and_deploy:
     jobs:
       - build:
-          branches:
-            ignore: gh-pages
+          filters:
+            branches:
+              ignore: gh-pages
   update_trader_inventory:
     triggers:
       - schedule:
