Add primes submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "static/wp-content/uploads/2019"]
 	path = static/wp-content/uploads/2019
 	url = https://github.com/warframeblog/images2019.git
+[submodule "static/images/primes"]
+	path = static/images/primes
+	url = https://github.com/warframeblog/primes.git
