Revert "Set specific version of hugo to fix problem with more tag"
This reverts commit c588aaf47a829f0394aa4e4aaf254b99624712fc.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
                 command: npm install
             - run:
                 name: Install Hugo
-                command: apk update && apk add "hugo=0.54.0-r0"
+                command: apk update && apk add hugo
             - run:
                 name: Mark script as executable
                 command: chmod +x ./.circleci/publish_to_ghpages.sh
