Fix yaml validation

--- a/data/theme/sidebar.yaml
+++ b/data/theme/sidebar.yaml
@@ -13,7 +13,7 @@ items:
       - href: "/how-to-get-hydroid/"
         text: How to get Hydroid
       - href: "/warframe-arbitrations-alerts-guide/"
-        text: Warframe Arbitrations: Lethal Alerts Guide
+        text: "Warframe Arbitrations: Lethal Alerts Guide"
       - href: "/affinity-how-level-up/"
         text: Affinity Mechanic – How to Level up Correctly
   - header: "Follow Us"
