--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "angled-edges": "^2.0.0",
     "axios": "^0.18.0",
-    "bulma": "^0.7.1",
+    "bootstrap": "4.0.x",
     "cheerio": "^1.0.0-rc.2",
     "clean-css": "^4.2.1",
     "concurrently": "^4.0.1",
@@ -32,12 +32,12 @@
     "gulp-autoprefixer": "^6.0.0",
     "gulp-htmlmin": "^4.0.0",
     "gulp-inline-source": "^3.2.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-shell": "^0.6.5",
     "gulp-sourcemaps": "^2.6.4",
     "inquirer": "^6.2.2",
     "lodash": "^4.17.11",
-    "node-sass-magic-importer": "^5.2.0",
     "number-to-words": "^1.2.4",
     "rimraf": "^2.6.2",
     "uncss": "^0.16.2"
