--- a/package.json
+++ b/package.json
@@ -22,26 +22,30 @@
   "homepage": "https://warframeblog.com/",
   "devDependencies": {
     "angled-edges": "^2.0.0",
+    "autoprefixer": "^9.5.1",
     "axios": "^0.18.0",
     "bootstrap": "4.0.x",
     "cheerio": "^1.0.0-rc.2",
     "clean-css": "^4.2.1",
     "concurrently": "^4.0.1",
+    "csso": "^3.5.1",
     "gray-matter": "^4.0.1",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-htmlmin": "^4.0.0",
-    "gulp-inline-source": "^3.2.0",
+    "gulp-ignore": "^2.0.2",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-shell": "^0.6.5",
     "gulp-sourcemaps": "^2.6.4",
     "inquirer": "^6.2.2",
     "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
     "number-to-words": "^1.2.4",
+    "postcss": "^7.0.14",
     "rimraf": "^2.6.2",
-    "uncss": "^0.16.2",
-    "autoprefixer": "^9.5.1",
-    "node-sass": "^4.11.0"
+    "uncss": "^0.16.2"
   }
 }
