--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
   },
   "homepage": "https://warframeblog.com/",
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "angled-edges": "^2.0.0",
     "autoprefixer": "^9.5.1",
     "axios": "^0.18.0",
+    "babel-plugin-module-resolver": "^3.2.0",
     "bootstrap": "4.0.x",
+    "bootstrap-material-design": "^4.1.1",
     "cheerio": "^1.0.0-rc.2",
     "clean-css": "^4.2.1",
     "concurrently": "^4.0.1",
@@ -32,6 +37,7 @@
     "gray-matter": "^4.0.1",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-better-rollup": "^4.0.1",
     "gulp-htmlmin": "^4.0.0",
     "gulp-ignore": "^2.0.2",
     "gulp-postcss": "^8.0.0",
@@ -42,6 +48,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "http-server": "^0.11.1",
     "inquirer": "^6.2.2",
+    "jquery": "^3.4.0",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "number-to-words": "^1.2.4",
@@ -49,6 +56,10 @@
     "postcss-csso": "^3.0.0",
     "postcss-uncss": "^0.16.1",
     "rimraf": "^2.6.2",
+    "rollup": "^1.10.1",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-node-resolve": "^4.2.3",
     "uncss": "^0.16.2"
   }
 }
