--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "number-to-words": "^1.2.4",
+    "popper.js": "^1.15.0",
     "postcss": "^7.0.14",
     "postcss-csso": "^3.0.0",
     "postcss-uncss": "^0.16.1",
