--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "rimraf": "^2.6.2",
     "rollup": "^1.10.1",
     "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-babel-minify": "^8.0.0",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-node-resolve": "^4.2.3",
     "uncss": "^0.16.2"
