Add lazysizes script

--- a/.babelrc
+++ b/.babelrc
@@ -12,8 +12,11 @@
     "@babel/plugin-proposal-object-rest-spread",
     [
       "module-resolver", {
-        "alias": [{ "src": "./node_modules/bootstrap", "expose": "bootstrap" }, 
-          {"src": "./node_modules/bootstrap-material-design", "expose": "bootstrap-material-design"}]
+        "alias": [
+          { "src": "./node_modules/bootstrap", "expose": "bootstrap" }, 
+          {"src": "./node_modules/bootstrap-material-design", "expose": "bootstrap-material-design"},
+          {"src": "./node_modules/lazysizes", "expose": "lazysizes"}
+        ]
       }
     ]
   ]
