--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ enableRobotsTXT = true
 DefaultContentLanguage = "en"
 googleAnalytics = "UA-108446512-1"
 canonifyURLs = true
+enableInlineShortcodes = true
 [social]
 	twitter = "warframeblog"
 	facebook = "warframeblog"
